Added PowerBI graph to HTML.

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,6 +10,11 @@
     </div>
 
     <div>
+        <h3><em>Figure1: Chris's Love for Maura Over Time</em></h3>
+        <iframe width="800" height="600" src="https://app.powerbi.com/view?r=eyJrIjoiMDZiZDcyNTctNWM2Yi00YjFhLWE5MzctYTAzZWM0ZGQzYWRjIiwidCI6ImIzMmFmZGU4LTg2YzQtNDY2ZS1iZTk1LTliNjQyN2NmZDJmMiIsImMiOjN9" frameborder="0" allowFullScreen="true"></iframe>
+    </div>
+
+    <div>
         {% for post in posts %}
         <div>
             <p>published: {{ post.published_date }}</p>
