Added views for comments on blog posts

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -12,13 +12,14 @@
 
 {% for post in posts %}
 <div>
-    <div class="date"
-                <p>published: {{ post.published_date }}</p>
-    </div>
     <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
         <p>{{ post.text|linebreaksbr }}</p>
+    <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>
+    </div>
+    <div class="date"
+        <p>published: {{ post.published_date }}</p>
     </div>
     {% endfor %}
 
-    {% endblock %}
+{% endblock %}
 
