--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -59,3 +59,7 @@ h1, h2, h3, h4 {
 .post h2 a, .post h2 a:visited, .post h2 {
         color: aquamarine;
     }
+
+.comment {
+    margin: 20px 0px 20px 20px
+}
