--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -3,16 +3,37 @@
 {% block content %}
 
 <div class="post">
+
+    {% if user.is_authenticated %}
+    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
+    <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+    {% endif %}
+    <h2>{{ post.title }}</h2>
+    <p>{{ post.text|linebreaksbr }}</p>
+
     {% if post.published_date %}
     <div class="date">
         {{ post.published_date }}
     </div>
+    {% else %}
+    <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk %}">Publish</a>
     {% endif %}
-    {% if user.is_authenticated %}
-    <a class="btn btn-default" href="{% url 'post_edit' pk=post.pk %}"><span class="glyphicon glyphicon-pencil"></span></a>
-    {% endif %}
-    <h2>{{ post.title }}</h2>
-    <p>{{ post.text|linebreaksbr }}</p>
 </div>
+
+<a class="btn btn-default" href="{% url 'add_comment_to_post' pk=post.pk %}">Add comment</a>
+
+{% for comment in post.comments.all %}
+<div class="comment">
+    <strong>{{ comment.author }}</strong> <small class="date">({{ comment.created_date }})</small>
+    <p>{{ comment.text|linebreaks }}</p>
+    {% if not comment.approved_comment %}
+    <a class="btn btn-default" href="{% url 'comment_remove' pk=comment.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
+    <a class="btn btn-default" href="{% url 'comment_approve' pk=comment.pk %}"><span class="glyphicon glyphicon-ok"></span></a>
+    {% endif %}
+    <br></br>
+</div>
+{% empty %}
+    <p>No comments here yet :(</p>
+{% endfor %}
 
 {% endblock %}
